--- a/Authentication/Login/index.html
+++ b/Authentication/Login/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -16,6 +15,8 @@
     Password: <input type="password" name="password" id="password" value="" required>
 	<br>
     <button type="submit" name="login" id="login" value="">Log in</button>
+    <br>
+    don't have an account yet? register <a href="../Register">here</a>.
     </form>
 
 	
