--- a/Authentication/Register/index.html
+++ b/Authentication/Register/index.html
@@ -18,6 +18,8 @@
 	Email: <input type="email" name="email" id="email" value="" required>
 	<br>
     <button type="submit" name="register" id="register" value="">Register</button>
+    <br>
+    already have an account? click <a href="../Login">here</a>.
     </form>
 </body>
 </html>
