--- a/Authentication/Register/index.html
+++ b/Authentication/Register/index.html
@@ -11,15 +11,22 @@
 	<div id="text"></div>
 	
 	<form id="form" method="post">
-    Username: <input type="text" name="username" id="username" value="" required>
-    <br>
-    Password: <input type="password" name="password" id="password" value="" required>
-	<br>
-	Email: <input type="email" name="email" id="email" value="" required>
-	<br>
-    <button type="submit" name="register" id="register" value="">Register</button>
-    <br>
-    already have an account? click <a href="../Login">here</a>.
-    </form>
+		Username: <input type="text" name="username" id="username" value="" required>
+		<br>
+		Password: <input type="password" name="password" id="password" value="" required>
+		<br>
+		Email: <input type="email" name="email" id="email" value="" required>
+		<br>
+		Account Type:	<select name="type">
+							<option value="pat">Patient</option>
+							<option value="psy">Psychologist</option>
+							<option value="int">Intern</option>
+							<option value="rev">Review Applicant</option>
+						</select>
+		<br>
+		<button type="submit" name="register" id="register" value="">Register</button>
+		<br>
+		already have an account? click <a href="../Login">here</a>.
+	</form>
 </body>
 </html>
