Addition of chat list

--- a/Chat/selection/index.html
+++ b/Chat/selection/index.html
@@ -3,8 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Select user</title>
+	 <link rel="stylesheet" type="text/css" href="css/bulma.css">
+	 <link rel="stylesheet" type="text/css" href="css/custom.css">
 </head>
 <body>
-	Hello World!
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="script.js"></script>
+
+    Hello World!
+    <div id="log"></div>
 </body>
 </html>
