--- a/Chat/room/index.html
+++ b/Chat/room/index.html
@@ -3,16 +3,22 @@
 <head>
 	<meta charset="UTF-8">
 	<title>PSPS-Chat</title>
+	<link rel="stylesheet" href="../css/bulma.css">
+	<link rel="stylesheet" href="../css/custom.css">
 </head>
 <body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="script.js"></script>
 
-	<div id="log"></div>
+	<div class="tile is-vertical" id="chat-container">
+		<div class="tile" id="log-container">
+			<div id="log"></div>
+		</div>
 
-	<form id="input" method="post">
-		<input type="text" name="message" id="message"/>
-		<button type="submit" name="send" id="send">send</button>
-	</form>
+		<form class="tile" id="input" method="post">
+			<input style="width: 100%;" type="text" name="message" id="message"/>
+			<button type="submit" name="send" id="send">send</button>
+		</form>
+	</div>
 </body>
 </html>
