--- a/Homepage/html/index.html
+++ b/Homepage/html/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Home - Psyche Solution Psychological Services</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../css/bulma/bulma.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="../css/bulma/bulma-pageloader.min.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="../css/font-awesome/font-awesome.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../../Static/css/bulma/bulma.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../../Static/css/bulma/bulma-pageloader.min.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../../Static/css/font-awesome/font-awesome.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../css/main.css" />
-    <link rel="icon" href="../images/logo.png" />
+    <link rel="icon" href="../../Static/images/logo.png" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../js/main.js"></script>
 </head>
@@ -32,7 +32,7 @@
               <nav class="navbar" style="margin: 0 5% auto">
                     <div class="navbar-brand">
                       <a class="navbar-item" href="javascript:;">
-                        <img src="../images/logo.png">&nbsp;&nbsp;<img src="../images/company_name.png">
+                        <img src="../../Static/images/logo.png">&nbsp;&nbsp;<img src="../../Static/images/company_name.png">
                       </a>
                   
                       <a class="navbar-item is-hidden-desktop" href="https://github.com/jgthms/bulma" target="_blank">
