--- a/Backend/html/backend-base.html
+++ b/Backend/html/backend-base.html
@@ -15,7 +15,7 @@
     <nav class="navbar is-light">
         <div class="container is-fluid">
             <div class="navbar-brand">
-                <a href="javascript:;" class="navbar-item">
+                <a href="javascript:;" class="navbar-item" id="company-logo">
                     <strong><img src="../../Static/images/logo.png">&nbsp;&nbsp;<img src="../../Static/images/company_name.png"></strong>
                 </a>
             </div>
