--- a/Footer/html/footer-distributed-with-address-and-phones.html
+++ b/Footer/html/footer-distributed-with-address-and-phones.html
@@ -60,24 +60,25 @@
 					<a href="#">Contact</a>
 				</p>
 
-				<p class="footer-company-name">Company Name &copy; 2015</p>
+				<p class="footer-company-name">Psyche Solution Psychological Services &copy; 2015</p>
 			</div>
 
 			<div class="footer-center">
 
 				<div>
 					<i class="fa fa-map-marker"></i>
-					<p><span>21 Revolution Street</span> Paris, France</p>
+					<p><span>Unit 2 Blk 4 Lot 4 Marilag Subdivision</span> Dasmariñas, Cavite </p>
 				</div>
 
 				<div>
 					<i class="fa fa-phone"></i>
-					<p>+1 555 123456</p>
+					<!-- <p>+1 555 123456</p> -->
+					<p> +63 922 810 5148 </p>
 				</div>
 
 				<div>
 					<i class="fa fa-envelope"></i>
-					<p><a href="mailto:support@company.com">support@company.com</a></p>
+					<p><a href="mailto:earljohntubig@gmail.com">earljohntubig@gmail.com (temporary)</a></p>
 				</div>
 
 			</div>
@@ -86,15 +87,15 @@
 
 				<p class="footer-company-about">
 					<span>About the company</span>
-					Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
+					We are a specialist and provider of psychological assessment, counseling/psychotherapy, training/seminar, and board exam review for psychometricians.
 				</p>
 
 				<div class="footer-icons">
 
-					<a href="#"><i class="fa fa-facebook"></i></a>
+					<a href="https://www.facebook.com/psychesolution/" target="_blank"><i class="fa fa-facebook"></i></a>
 					<a href="#"><i class="fa fa-twitter"></i></a>
 					<a href="#"><i class="fa fa-linkedin"></i></a>
-					<a href="#"><i class="fa fa-github"></i></a>
+					<!-- <a href="#"><i class="fa fa-github"></i></a> -->
 
 				</div>
 
